--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@ default: &default
   timeout: 5000
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: <%= ENV.fetch("DATABASE_HOST", 'localhost') %>
-  username: <%= ENV.fetch("DATABASE_USER", 'jesher') %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD", 'jesher') %>
+  username: <%= ENV.fetch("DATABASE_USER", 'postgres') %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD", 'postgres') %>
 
 development:
   <<: *default
